[metadata]
name = precept
version = attr: precept._version.__version__
author = Philippe Duval
author_email = t4rk@outlook.com
description = Async cli application builder.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cli, async
license = MIT
url = https://github.com/T4rk1n/precept
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages = find:
install_requires =
    stringcase
    colorama
    ruamel.yaml

[options.packages.find]
exclude =
    tests